# JASMN

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/cache/yahoo/: chart_ADANIENT.NS_10y.json  chart_ADANIENT.NS_2y.json  chart_ADANIPORTS.NS_10y.json  chart_APOLLOHOSP.NS_10y.json  chart_ASIANPAINT.NS_10y.json  chart_ASIANPAINT.NS_2y.json  chart_AXISBANK.NS_10y.json  chart_AXISBANK.NS_2y.json  chart_BAJAJ-AUTO.NS_10y.json  chart_BAJAJFINSV.NS_10y.json  chart_BAJFINANCE.NS_10y.json  chart_BAJFINANCE.NS_2y.json  chart_BEL.NS_10y.json  chart_BHARTIARTL.NS_10y.json  chart_BHARTIARTL.NS_2y.json  chart_BRITANNIA.NS_10y.json  chart_BZ_F_2y.json  chart_CIPLA.NS_10y.json  chart_COALINDIA.NS_10y.json  (+61 more)
docs/: DESIGN.md
jasmin/: __init__.py  cli.py  config.py  pipeline.py
jasmin/api/: app.py
jasmin/cleaning/: __init__.py  cleaners.py
jasmin/collectors/: __init__.py  base.py  fundamentals.py  institutional.py  macro.py  news.py  prices.py
jasmin/dataset/: __init__.py  master.py
jasmin/features/: __init__.py  engineering.py  technical.py
jasmin/live/: http.py  nse.py  rss.py  search.py  yahoo.py
jasmin/models/: __init__.py  registry.py  train.py
jasmin/prediction/: __init__.py  analyze.py  confidence.py  explain.py  predict.py  summary.py
jasmin/scheduler/: daemon.py
jasmin/utils/: logging.py  market_calendar.py  seeds.py
jasmin/validation/: __init__.py  validators.py
tests/: conftest.py  test_analyze_targets.py  test_api.py  test_collectors.py  test_features.py  test_live_and_calendar.py  test_models_prediction.py  test_validation_cleaning.py
